k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: iot-control
  labels:
    name: iot-control
    app: iot-control-system
